@@ -1,0 +1,74 @@
+# flake8: noqa
+# -*- coding: utf-8 -*-
+import datetime
+from south.db import db
+from south.v2 import DataMigration
+from django.db import models
+
+class Migration(DataMigration):
+
+    def forwards(self, orm):
+        "Write your forwards methods here."
+        for gpe in orm['good_practice_examples.GoodPracticeExample'].objects.all():
+            for placeholder in gpe.placeholders.all():
+                placeholder.slot = 'practice_description'
+                placeholder.save()
+
+
+    def backwards(self, orm):
+        "Write your backwards methods here."
+
+    models = {
+        'cms.placeholder': {
+            'Meta': {'object_name': 'Placeholder'},
+            'default_width': ('django.db.models.fields.PositiveSmallIntegerField', [], {'null': 'True'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'slot': ('django.db.models.fields.CharField', [], {'max_length': '50', 'db_index': 'True'})
+        },
+        u'good_practice_examples.country': {
+            'Meta': {'object_name': 'Country'},
+            'country': ('django_countries.fields.CountryField', [], {'max_length': '2'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'})
+        },
+        u'good_practice_examples.goal': {
+            'Meta': {'object_name': 'Goal'},
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'})
+        },
+        u'good_practice_examples.goaltranslation': {
+            'Meta': {'object_name': 'GoalTranslation'},
+            'goal': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['good_practice_examples.Goal']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'language': ('django.db.models.fields.CharField', [], {'max_length': '5'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '256'})
+        },
+        u'good_practice_examples.goodpracticeexample': {
+            'Meta': {'object_name': 'GoodPracticeExample'},
+            'countries': ('django.db.models.fields.related.ManyToManyField', [], {'to': u"orm['good_practice_examples.Country']", 'symmetrical': 'False'}),
+            'goals': ('django.db.models.fields.related.ManyToManyField', [], {'to': u"orm['good_practice_examples.Goal']", 'symmetrical': 'False'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'placeholders': ('djangocms_utils.fields.M2MPlaceholderField', [], {'to': "orm['cms.Placeholder']", 'symmetrical': 'False'}),
+            'sectors': ('django.db.models.fields.related.ManyToManyField', [], {'to': u"orm['good_practice_examples.Sector']", 'symmetrical': 'False'})
+        },
+        u'good_practice_examples.goodpracticeexampletranslation': {
+            'Meta': {'object_name': 'GoodPracticeExampleTranslation'},
+            'good_practice_example': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['good_practice_examples.GoodPracticeExample']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'is_published': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'language': ('django.db.models.fields.CharField', [], {'max_length': '5'}),
+            'title': ('django.db.models.fields.CharField', [], {'max_length': '256'})
+        },
+        u'good_practice_examples.sector': {
+            'Meta': {'object_name': 'Sector'},
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'})
+        },
+        u'good_practice_examples.sectortranslation': {
+            'Meta': {'object_name': 'SectorTranslation'},
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'language': ('django.db.models.fields.CharField', [], {'max_length': '5'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '256'}),
+            'sector': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['good_practice_examples.Sector']"})
+        }
+    }
+
+    complete_apps = ['good_practice_examples']
+    symmetrical = True
